--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 leptos = { version = "0.5.1", features = ["csr", "nightly"] }
+serde = "1.0.189"
+uuid = { version = "1.5.0", features = ["wasm-bindgen", "v4", "js", "serde"] }
